Resolve "Improve ball and kick model calibration"
Closes #2014

See merge request main/Sumatra!1925

sumatra-commit: ca67a32d960ea5b48ce114f261b9fa32c7386d1c